--- a/css/styles.scss
+++ b/css/styles.scss
@@ -141,6 +141,14 @@ h1 {
   body {
   background-image: none!important;
   background-color: #141517!important;
+  overflow: visible;
+  }
+  h2 {
+    margin-right: 5rem;
+  }
+  .nav {
+    justify-content: center;
+    padding-right: 5rem;
   }
   #overlay {
   display: none!important;
@@ -152,7 +160,15 @@ h1 {
   display: block!important;
   font-size: 20px;
   color: white;
+  padding-right: 60px;
   }
+  h1 {
+    font-size: 5rem;
+  }
+.col-md-3 {
+ margin-left: auto;
+ margin-right: auto;
+}
 }
 /*
  * Cover
