--- a/css/styles.css
+++ b/css/styles.css
@@ -128,11 +128,8 @@ h1 {
     background-image: none !important;
     background-color: #141517 !important;
     overflow: visible; }
-  h2 {
-    margin-right: 5rem; }
   .nav {
-    justify-content: center;
-    padding-right: 5rem; }
+    justify-content: center; }
   #overlay {
     display: none !important; }
   #yellowOverlay {
@@ -140,8 +137,7 @@ h1 {
   .about {
     display: block !important;
     font-size: 20px;
-    color: white;
-    padding-right: 60px; }
+    color: white; }
   h1 {
     font-size: 5rem; }
   .col-md-3 {
