--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ h1 {
   body {
     background-image: none !important;
     background-color: #141517 !important;
-    overflow: auto;
+    overflow: auto !important;
   }
 
   .nav {
