--- a/css/styles.scss
+++ b/css/styles.scss
@@ -143,7 +143,7 @@ h1 {
   body {
   background-image: none!important;
   background-color: #141517!important;
-  overflow: auto;
+  overflow: auto!important;
   }
   .nav {
     justify-content: center;
