--- a/css/styles.scss
+++ b/css/styles.scss
@@ -74,8 +74,8 @@ body {
 
 #overlay {
   position: absolute; /* Sit on top of the page content */
-  width: 60%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
+  width: 60%; 
+  height: 100%; 
   top: 0;
   right: 0;
   bottom: 0;
@@ -95,11 +95,12 @@ display: none;
   display: none;
 }
 
-
 h1 {
   font-size: 130px;
 }
-
+.background-image-hover {
+background-image: url(../img/landing_page_main_hover.jpg);
+}
 .nav-masthead .nav-link {
   font-size: 1rem;
   padding: .25rem 0.75rem;
